# casbin-tortoise-adapter

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
casbin_tortoise_adapter/: __init__.py  adapter.py  filter.py  model.py  typing.py
tests/: conftest.py  test_adapter.py
